--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -24,10 +24,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="{{ url_for('home_page') }}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Market</a>
+          <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
         </li>
       </ul>
       <div class="d-flex gap-3">
