--- a/market/templates/market.html
+++ b/market/templates/market.html
@@ -1,6 +1,6 @@
 {% extends('base.html') %}
 {% block title %}
-Home
+Market
 {% endblock %}
 {% block content %}
 <div class="container">
@@ -18,10 +18,10 @@ Home
       {% for item in items %}
 
         <tr>
-          <th scope="row">1</th>
           <td>{{ item.id }}</td>
           <td>{{ item.name }}</td>
           <td>{{ item.barcode }}</td>
+          <td>{{ item.price }}</td>
           <td>
             <button class="btn btn-outline-success">More Info</button>
             <button class="btn btn-outline-success">Purchase</button>
