--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <title>
     {% block title %}
     {% endblock %}
@@ -40,5 +41,17 @@
   {% block content %}
   {% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  {% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages[0]: %}
+  <script>
+      Toastify({
+                text: "{{ messages[0][1] }}",
+                duration: 3000,  // 3 seconds
+                close: true
+            }).showToast();
+  </script>
+    {% endif %}
+  {% endwith %}
 </body>
 </html>
