--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -31,10 +31,18 @@
           <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
         </li>
       </ul>
+      {% if current_user.is_authenticated %}
+        <div class="d-flex gap-3">
+          <p class="mb-0 fw-bold" style="color:lawngreen">{{ current_user.budget }}$</p>
+          <p class="mb-0 text-white">Welcome , {{ current_user.name }}</p>
+          <a href="{{ url_for('logout') }}" class="nav-link text-white">Logout</a>
+        </div>
+      {% else %}
       <div class="d-flex gap-3">
         <button class="btn btn-outline-success" type="submit">Login</button>
         <button class="btn btn-outline-success" type="submit">Singup</button>
       </div>
+      {% endif %}
     </div>
   </div>
 </nav>
