--- a/market/templates/market.html
+++ b/market/templates/market.html
@@ -3,32 +3,57 @@
 Market
 {% endblock %}
 {% block content %}
-<div class="container">
-  <table class="table table-dark table-striped mt-5">
-    <thead>
-      <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Name</th>
-        <th scope="col">Barcode</th>
-        <th scope="col">Price</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for item in items %}
-
-        <tr>
-          <td>{{ item.id }}</td>
-          <td>{{ item.name }}</td>
-          <td>{{ item.barcode }}</td>
-          <td>{{ item.price }}</td>
-          <td>
-            <button class="btn btn-outline-success">More Info</button>
-            <button class="btn btn-outline-success">Purchase</button>
-          </td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+<div class="row">
+  <div class="col-8">
+    <h1 class="text-white fs-3 mt-5 text-center">Available Items On The Market</h1>
+    <div class="container">
+      <table class="table table-dark table-striped mt-5">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Barcode</th>
+            <th scope="col">Price</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for item in items %}
+            {% include 'item_modal.html'  %}
+            <tr>
+              <td>{{ item.id }}</td>
+              <td>{{ item.name }}</td>
+              <td>{{ item.barcode }}</td>
+              <td>{{ item.price }}</td>
+              <td>
+                <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#item-modal-{{ item.id }}">
+                  View Info
+                </button>
+                <button class="btn btn-outline-success"  data-bs-toggle="modal" data-bs-target="#purchase-modal-{{ item.id }}">Purchase</button>
+              </td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="col-4">
+    <h1 class="text-white fs-3 mt-5 text-center">User Owned Items</h1>
+    <div class="mt-5">
+    {% for item in ownedItems %}
+    <div class="card text-bg-dark mt-3" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title text-white">{{ item.name }}</h5>
+        <p class="card-text">Price : {{ item.price }}</p>
+        <form method="post"> 
+          {{ sellForm.csrf_token }}
+          <input type="hidden" name="sell_item" value="{{ item.id }}">
+          {{ sellForm.submit(class='btn btn-danger') }}
+        </form>
+      </div>
+    </div>
+    {% endfor %}
+    </div>
+  </div>
 </div>
 {% endblock %}
